--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+h1 {
+  margin: 0 0 20px 0;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+body {
+  background-color: rgba(0, 0, 0, 0.05)
+}
